#-------------------------------------------------------------------------------
nobase_pkginclude_HEADERS =\
foundation/config/nebula_auto_config.h \
foundation/adaptor.h \
foundation/array.h \
foundation/assert.h \
foundation/async/atomic.h \
foundation/async/background.h \
foundation/async/broadcast.h \
foundation/async/common.h \
foundation/async/condition_variable.h \
foundation/async/config.h \
foundation/async/detach.h \
foundation/async/future/detail/future_backend.h \
foundation/async/future/exception.h \
foundation/async/future/future.h \
foundation/async/future.h \
foundation/async/future/promise.h \
foundation/async.h \
foundation/async/is_joinable.h \
foundation/async/join.h \
foundation/async/lock.h \
foundation/async/mutex.h \
foundation/async/posix/posix_condition_variable.h \
foundation/async/posix/posix_mutex.h \
foundation/async/posix/posix_thread.h \
foundation/async/scoped_unlock.h \
foundation/async/signal.h \
foundation/async/this_thread.h \
foundation/async/thread.h \
foundation/async/thread_pool/thread_pool.h \
foundation/async/try_lock_for.h \
foundation/async/try_lock.h \
foundation/async/unlock.h \
foundation/async/wait_for.h \
foundation/async/wait.h \
foundation/bitset.h \
foundation/call_traits/cref.h \
foundation/call_traits.h \
foundation/call_traits/initial.h \
foundation/call_traits/param.h \
foundation/call_traits/ref.h \
foundation/call_traits/value.h \
foundation/carray.h \
foundation/cerrno.h \
foundation/char_traits.h \
foundation/chrono/config.h \
foundation/chrono/duration.h \
foundation/chrono.h \
foundation/chrono/high_resolution_clock.h \
foundation/chrono/high_resolution_clock/high_resolution_clock_clock_gettime.h \
foundation/chrono/monotonic_clock.h \
foundation/chrono/monotonic_clock/monotonic_clock_clock_gettime.h \
foundation/chrono/system_clock.h \
foundation/chrono/system_clock/system_clock_clock_gettime.h \
foundation/chrono/timespec.h \
foundation/chrono/traits.h \
foundation/config/api.h \
foundation/config/architecture.h \
foundation/config/common.h \
foundation/config/compiler.h \
foundation/config/endian.h \
foundation/config.h \
foundation/config/headers.h \
foundation/config/os.h \
foundation/config/stdlib.h \
foundation/cstring.h \
foundation/declval.h \
foundation/defs.h \
foundation/dll_interface.h \
foundation/dynamic_array.h \
foundation/dynamic_bitset.h \
foundation/enable_if.h \
foundation/endian/byteswap.h \
foundation/endian/convert.h \
foundation/endian.h \
foundation/endian/intrin.h \
foundation/endian/tags.h \
foundation/exception/detail/ei_container.h \
foundation/exception/error_info.h \
foundation/exception/exception.h \
foundation/exception.h \
foundation/exception/message.h \
foundation/expect.h \
foundation/filesystem/canonical.h \
foundation/filesystem/config.h \
foundation/filesystem/create_directory.h \
foundation/filesystem/create_link.h \
foundation/filesystem/create_symlink.h \
foundation/filesystem/current_directory.h \
foundation/filesystem/exception.h \
foundation/filesystem/file_status.h \
foundation/filesystem.h \
foundation/filesystem/path.h \
foundation/filesystem/read_symlink.h \
foundation/filesystem/recursive_scan.h \
foundation/filesystem/remove.h \
foundation/filesystem/rename.h \
foundation/filesystem/scan.h \
foundation/filesystem/types.h \
foundation/format/config.h \
foundation/format/digit_codec.h \
foundation/format/fwrite/bool.h \
foundation/format/fwrite/char.h \
foundation/format/fwrite/cstring.h \
foundation/format/fwrite/c_style_str.h \
foundation/format/fwrite/fpoint.h \
foundation/format/fwrite/fwrite_impl_fwd.h \
foundation/format/fwrite.h \
foundation/format/fwrite/integer.h \
foundation/format/fwrite/string.h \
foundation/format.h \
foundation/format/interp.h \
foundation/format/tags.h \
foundation/format/to_integer.h \
foundation/format/to_string.h \
foundation/format/writer/bin.h \
foundation/format/writer/dec.h \
foundation/format/writer/endl.h \
foundation/format/writer/hex.h \
foundation/format/writer/integer.h \
foundation/format/writer/integer/integer_impl.h \
foundation/format/writer/oct.h \
foundation/format/writer/real.h \
foundation/format/writer/real/real_impl.h \
foundation/format/writer/type.h \
foundation/function.h \
foundation/function_traits.h \
foundation/function_traits/ftraits.h \
foundation/function_traits/detail/ftraits.h \
foundation/fwd.h \
foundation/get.h \
foundation/hal/fnv1a.h \
foundation/hal/fnv1.h \
foundation/hal/traits.h \
foundation/hash.h \
foundation/hash/hash.h \
foundation/hash_map.h \
foundation/hash_set.h \
foundation/hash/traits.h \
foundation/heap.h \
foundation/io/common.h \
foundation/io/defs.h \
foundation/io/exception.h \
foundation/io/flush.h \
foundation/io/get.h \
foundation/io.h \
foundation/io/peek.h \
foundation/io/put.h \
foundation/io/read.h \
foundation/io/seek.h \
foundation/io/stream/fstream.h \
foundation/io/stream/msink.h \
foundation/io/stream/mstream.h \
foundation/io/stream/nullsink.h \
foundation/io/stream/stdstreams.h \
foundation/io/stream/stream_adaptor.h \
foundation/io/stream/stream.h \
foundation/io/sync.h \
foundation/io/tags.h \
foundation/io/tell.h \
foundation/io/traits.h \
foundation/io/unget.h \
foundation/io/write.h \
foundation/iterator/algorithm/advance.h \
foundation/iterator/algorithm/binary_search.h \
foundation/iterator/algorithm/copy.h \
foundation/iterator/algorithm/copy_if.h \
foundation/iterator/algorithm/copy_n.h \
foundation/iterator/algorithm/count.h \
foundation/iterator/algorithm/count_if.h \
foundation/iterator/algorithm/distance.h \
foundation/iterator/algorithm/equal.h \
foundation/iterator/algorithm/fill.h \
foundation/iterator/algorithm/fill_n.h \
foundation/iterator/algorithm/find.h \
foundation/iterator/algorithm/find_if.h \
foundation/iterator/algorithm/find_if_not.h \
foundation/iterator/algorithm/for_each.h \
foundation/iterator/algorithm/generate.h \
foundation/iterator/algorithm/generate_n.h \
foundation/iterator/algorithm/heap.h \
foundation/iterator/algorithm/iter_swap.h \
foundation/iterator/algorithm/lexicographical_compare.h \
foundation/iterator/algorithm/lower_bound.h \
foundation/iterator/algorithm/move.h \
foundation/iterator/algorithm/move_if.h \
foundation/iterator/algorithm/move_if_noexcept.h \
foundation/iterator/algorithm/move_if_noexcept_if.h \
foundation/iterator/algorithm/move_if_noexcept_n.h \
foundation/iterator/algorithm/move_n.h \
foundation/iterator/algorithm/next.h \
foundation/iterator/algorithm/next_permutation.h \
foundation/iterator/algorithm/partition.h \
foundation/iterator/algorithm/prev.h \
foundation/iterator/algorithm/prev_permutation.h \
foundation/iterator/algorithm/remove.h \
foundation/iterator/algorithm/remove_if.h \
foundation/iterator/algorithm/reverse.h \
foundation/iterator/algorithm/sort.h \
foundation/iterator/algorithm/stable_sort.h \
foundation/iterator/algorithm/swap.h \
foundation/iterator/algorithm/upper_bound.h \
foundation/iterator/detail/traits_helper.h \
foundation/iterator.h \
foundation/iterator/is_iterator.h \
foundation/iterator/iterator_facade.h \
foundation/iterator/normal_iterator.h \
foundation/iterator/reverse_iterator.h \
foundation/iterator/tags.h \
foundation/iterator/traits.h \
foundation/list.h \
foundation/math.h \
foundation/math/basic/abs.h \
foundation/math/basic/ceil.h \
foundation/math/basic/copy_sign.h \
foundation/math/basic/floor.h \
foundation/math/basic/get_exp.h \
foundation/math/basic.h \
foundation/math/basic/round0.h \
foundation/math/basic/split.h \
foundation/math/classification/classify.h \
foundation/math/classification.h \
foundation/math/classification/isfinite.h \
foundation/math/classification/isinf.h \
foundation/math/classification/isnan.h \
foundation/math/classification/isnegative.h \
foundation/math/classification/isnormal.h \
foundation/math/classification/isunordered.h \
foundation/math/classification/iszero.h \
foundation/math/common.h \
foundation/math/complex/arg.h \
foundation/math/complex/common.h \
foundation/math/complex/conjugate.h \
foundation/math/complex.h \
foundation/math/complex/model/complex.h \
foundation/math/complex/polar.h \
foundation/math/division/div.h \
foundation/math/division.h \
foundation/math/division/mod.h \
foundation/math/exact_cast/exact_cast.h \
foundation/math/exact_cast.h \
foundation/math/exp/exp2.h \
foundation/math/exp/exp.h \
foundation/math/exp.h \
foundation/math/exp/log10.h \
foundation/math/exp/log2.h \
foundation/math/exp/log.h \
foundation/math/hyperbolic/acosh.h \
foundation/math/hyperbolic/asinh.h \
foundation/math/hyperbolic/atanh.h \
foundation/math/hyperbolic/cosh.h \
foundation/math/hyperbolic.h \
foundation/math/hyperbolic/sinh.h \
foundation/math/hyperbolic/tanh.h \
foundation/math/limits/epsilon.h \
foundation/math/limits.h \
foundation/math/limits/infinity.h \
foundation/math/limits/lowest.h \
foundation/math/limits/max_exponent.h \
foundation/math/limits/maximum.h \
foundation/math/limits/min_exponent.h \
foundation/math/limits/minimum.h \
foundation/math/limits/quiet_nan.h \
foundation/math/limits/round_error.h \
foundation/math/limits/signaling_nan.h \
foundation/math/linalg/backward_substitution.h \
foundation/math/linalg/detail/swap_rows.h \
foundation/math/linalg/determinant.h \
foundation/math/linalg/forward_substitution.h \
foundation/math/linalg.h \
foundation/math/linalg/lup_factorization.h \
foundation/math/linalg/solve_linear_eq.h \
foundation/math/linalg/trace.h \
foundation/math/linalg/transpose.h \
foundation/math/linalg/vectorize.h \
foundation/math/perm/format/permutation_writer.h \
foundation/math/perm.h \
foundation/math/perm/make_identity.h \
foundation/math/perm/model/dynamic_permutation.h \
foundation/math/perm/model/permutation.h \
foundation/math/perm/pow.h \
foundation/math/perm/traits.h \
foundation/math/perm/transpose.h \
foundation/math/pow/cbrt.h \
foundation/math/pow.h \
foundation/math/pow/pow.h \
foundation/math/pow/root.h \
foundation/math/pow/sqrt.h \
foundation/math/traits/base.h \
foundation/math/traits/digits.h \
foundation/math/traits/exponent.h \
foundation/math/traits.h \
foundation/math/traits/has_denorm.h \
foundation/math/traits/has_denorm_loss.h \
foundation/math/traits/has_infinity.h \
foundation/math/traits/has_quiet_nan.h \
foundation/math/traits/has_signaling_nan.h \
foundation/math/traits/is_bounded.h \
foundation/math/traits/is_exact.h \
foundation/math/traits/is_iec559.h \
foundation/math/traits/is_integer.h \
foundation/math/traits/is_modulo.h \
foundation/math/traits/is_signed.h \
foundation/math/traits/rounding.h \
foundation/math/traits/traps.h \
foundation/math/trig/acos.h \
foundation/math/trig/asin.h \
foundation/math/trig/atan2.h \
foundation/math/trig/atan.h \
foundation/math/trig/cos.h \
foundation/math/trig.h \
foundation/math/trig/sin.h \
foundation/math/trig/tan.h \
foundation/math/vec/format/vector_writer.h \
foundation/math/vec/model/detail/map_index.h \
foundation/math/vec/model/vector.h \
foundation/math/vector.h \
foundation/math/vec/traits.h \
foundation/mem.h \
foundation/memory/allocate.h \
foundation/memory/allocator.h \
foundation/memory/common.h \
foundation/memory/construct.h \
foundation/memory/deallocate.h \
foundation/memory/destroy.h \
foundation/memory.h \
foundation/memory/max_size.h \
foundation/memory/reallocate.h \
foundation/memory/rebind.h \
foundation/memory/socc.h \
foundation/memory/traits.h \
foundation/meta/abs.h \
foundation/meta/add.h \
foundation/meta/algo_fwd.h \
foundation/meta/algorithm/erase_if.h \
foundation/meta/algorithm/find.h \
foundation/meta/algorithm/for_each.h \
foundation/meta/algorithm/merge.h \
foundation/meta/algorithm/transform.h \
foundation/meta/and.h \
foundation/meta/bitand.h \
foundation/meta/bitor.h \
foundation/meta/bitxor.h \
foundation/meta/div.h \
foundation/meta/equal.h \
foundation/meta/expand.h \
foundation/meta/gcd.h \
foundation/meta/greater_equal.h \
foundation/meta/greater.h \
foundation/meta.h \
foundation/meta/identity.h \
foundation/meta/if.h \
foundation/meta/integral_constant.h \
foundation/meta/iter_fwd.h \
foundation/meta/lambda/bind.h \
foundation/meta/lambda/placeholder.h \
foundation/meta/lazy.h \
foundation/meta/less_equal.h \
foundation/meta/less.h \
foundation/meta/mod.h \
foundation/meta/mul.h \
foundation/meta/not_equal.h \
foundation/meta/not.h \
foundation/meta/nth.h \
foundation/meta/or.h \
foundation/meta/protect.h \
foundation/meta/ratio.h \
foundation/meta/ratio/ratio_add.h \
foundation/meta/ratio/ratio_div.h \
foundation/meta/ratio/ratio_gcd.h \
foundation/meta/ratio/ratio.h \
foundation/meta/ratio/ratio_mul.h \
foundation/meta/ratio/ratio_sub.h \
foundation/meta/seq/advance.h \
foundation/meta/seq/at.h \
foundation/meta/seq/back.h \
foundation/meta/seq/begin.h \
foundation/meta/seq/clear.h \
foundation/meta/seq/deref.h \
foundation/meta/seq/distance.h \
foundation/meta/seq/end.h \
foundation/meta/seq/front.h \
foundation/meta/seq_fwd.h \
foundation/meta/seq/iterator.h \
foundation/meta/seq/next.h \
foundation/meta/seq/pop_back.h \
foundation/meta/seq/pop_front.h \
foundation/meta/seq/prev.h \
foundation/meta/seq/push_back.h \
foundation/meta/seq/push_front.h \
foundation/meta/seq/rbegin.h \
foundation/meta/seq/rend.h \
foundation/meta/seq/seq.h \
foundation/meta/seq/size.h \
foundation/meta/shift_left.h \
foundation/meta/shift_right.h \
foundation/meta/sign.h \
foundation/meta/sub.h \
foundation/minmax.h \
foundation/move.h \
foundation/net.h \
foundation/net/address.h \
foundation/net/config.h \
foundation/net/defs.h \
foundation/net/endpoint.h \
foundation/net/error.h \
foundation/net/exception.h \
foundation/net/ip/ipv4_address.h \
foundation/net/ip/ipv4_endpoint.h \
foundation/net/ip/ipv6_address.h \
foundation/net/ip/ipv6_endpoint.h \
foundation/net/posix/epoll/epoll_proactor.h \
foundation/net/posix/epoll/epoll_socket.h \
foundation/net/posix/posix_async_dgram_socket.h \
foundation/net/posix/posix_async_service.h \
foundation/net/posix/posix_async_stream_socket.h \
foundation/net/posix/posix_ep_conv.h \
foundation/net/posix/posix_error.h \
foundation/net/posix/posix_dgram_socket.h \
foundation/net/posix/posix_protocol_server.h \
foundation/net/posix/posix_socket.h \
foundation/net/posix/posix_socket_option.h \
foundation/net/posix/posix_stream_socket.h \
foundation/net/protocol_server.h \
foundation/net/socket.h \
foundation/net/socket_option.h \
foundation/ops.h \
foundation/opts.h \
foundation/priority_queue.h \
foundation/ptr.h \
foundation/ptr/intrusive_ptr.h \
foundation/qlog.h \
foundation/qlog/formatter/formatter_base.h \
foundation/qlog/formatter/function.h \
foundation/qlog/formatter/prepend_all.h \
foundation/qlog/formatter/simple.h \
foundation/qlog/level.h \
foundation/qlog/logger.h \
foundation/qlog/log.h \
foundation/qlog/sink/console.h \
foundation/qlog/sink/file.h \
foundation/qlog/sink/function.h \
foundation/qlog/sink/sink_base.h \
foundation/qlog/sink/stream.h \
foundation/qlog/sink/syslog.h \
foundation/qlog/sink/tee.h \
foundation/queue.h \
foundation/random/config.h \
foundation/random/default_engine.h \
foundation/random/engine/dev_random/dev_random_device.h \
foundation/random/engine/dev_urandom/dev_urandom_device.h \
foundation/random/engine/pseudo_random_device.h \
foundation/random/engine/random_device.h \
foundation/random.h \
foundation/random/minmax.h \
foundation/random/traits.h \
foundation/range/adaptor/reversed_range.h \
foundation/range/adaptor/sliced_range.h \
foundation/range/adaptor/stridden_range.h \
foundation/range/algorithm/copy.h \
foundation/range/algorithm/copy_if.h \
foundation/range/algorithm/fill.h \
foundation/range/algorithm/find.h \
foundation/range/algorithm/find_if.h \
foundation/range/algorithm/for_each.h \
foundation/range/algorithm/generate.h \
foundation/range/algorithm/heap.h \
foundation/range/algorithm/lexicographical_compare.h \
foundation/range/algorithm/move.h \
foundation/range/algorithm/move_if.h \
foundation/range/algorithm/move_if_noexcept.h \
foundation/range/algorithm/move_if_noexcept_if.h \
foundation/range/algorithm/next_permutation.h \
foundation/range/algorithm/prev_permutation.h \
foundation/range/algorithm/remove.h \
foundation/range/algorithm/remove_if.h \
foundation/range/algorithm/reverse.h \
foundation/range/algorithm/sort.h \
foundation/range/algorithm/stable_sort.h \
foundation/range/algorithm/swap.h \
foundation/range/common.h \
foundation/range.h \
foundation/range/iterator_range.h \
foundation/range/sub_range.h \
foundation/range/traits.h \
foundation/ratio.h \
foundation/regex/config.h \
foundation/regex.h \
foundation/regex/match.h \
foundation/regex/match_result.h \
foundation/regex/regex_error.h \
foundation/regex/regex.h \
foundation/regex/regex_options.h \
foundation/regex/search.h \
foundation/regex/std/regex.h \
foundation/scope_exit.h \
foundation/scope_exit/scope_exit.h \
foundation/scope_exit/scope_exit_holder.h \
foundation/sorted_vector.h \
foundation/stack.h \
foundation/str.h \
foundation/string.h \
foundation/swap.h \
foundation/system/enum_utils.h \
foundation/system/errc.h \
foundation/system/error_category.h \
foundation/system/error_code.h \
foundation/system/error_condition.h \
foundation/system_error.h \
foundation/system/errval.h \
foundation/system/map_windows_error.h \
foundation/system/traits.h \
foundation/tagged_type.h \
foundation/tuple.h \
foundation/type_traits/fundamental_type_traits.h \
foundation/type_traits.h \
foundation/userconfig.h \
foundation/utils/demangle_type_info_name.h \
foundation/utils/tag.h \
foundation/utils/unpack.h \
foundation/utf.h \
foundation/utf/block.h \
foundation/utf/codepoint_iterator.h \
foundation/utf/common.h \
foundation/utf/config.h \
foundation/utf/conv.h \
foundation/utf/count.h \
foundation/utf/exception.h \
foundation/utf/normalize.h \
foundation/utf/query.h \
foundation/utf/script.h \
foundation/utf/to_lower.h \
foundation/utf/to_title.h \
foundation/utf/to_upper.h \
foundation/utf/types.h \
foundation/utf/unistring/block.h \
foundation/utf/unistring/case.h \
foundation/utf/unistring/normalize.h \
foundation/utf/unistring/query.h \
foundation/utf/unistring/script.h \
foundation/utf/unistring/utils.h \
foundation/utf/unistring/width.h \
foundation/utf/unistring/word_breaks.h \
foundation/utf/utf8_basics.h \
foundation/utf/validate.h \
foundation/utf/width.h \
foundation/utf/word_breaks.h \
foundation/variant.h \
foundation/vector.h \
gpg/config.h \
gpg/context.h \
gpg/defs.h \
gpg/error.h \
gpg/exception.h \
gpg/gpg.h \
gpg/key.h \
gpg/key_signature.h \
gpg/signature_info.h \
gpg/subkey.h \
gpg/user_id.h \
nml/config.h \
nml/nml.h \
nml/dll_interface.h

